--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "^3.3.3"
+    "@types/node": "^18.15.11",
+    "nuxt": "^3.3.3",
+    "typescript": "^5.0.3",
+    "vue-tsc": "^1.2.0"
   }
 }
