--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "eslint --max-warnings 0 \"src/**/*.{ts,vue}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{ts,vue}\"",
+    "format": "prettier --check \"src/**/*.{ts,vue}\"",
+    "format:write": "prettier --write \"src/**/*.{ts,vue}\""
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.1.1",
     "@types/node": "^18.15.11",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "eslint": "^8.37.0",
     "nuxt": "^3.3.3",
+    "prettier": "^2.8.7",
     "typescript": "^5.0.3",
     "vue-tsc": "^1.2.0"
   }
