--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@nuxt/eslint-config": "^0.1.1",
     "@types/node": "^18.15.11",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.37.0",
     "nuxt": "^3.3.3",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.3.1",
     "typescript": "^5.0.3",
     "vue-tsc": "^1.2.0"
   }
