--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "eslint --max-warnings 0 \"src/**/*.{ts,vue}\"",
     "lint:fix": "eslint --fix \"src/**/*.{ts,vue}\"",
     "format": "prettier --check \"src/**/*.{ts,vue}\"",
-    "format:write": "prettier --write \"src/**/*.{ts,vue}\""
+    "format:write": "prettier --write \"src/**/*.{ts,vue}\"",
+    "test": "vitest run"
   },
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
     "@types/node": "^18.15.11",
     "@vue/eslint-config-prettier": "^7.1.0",
+    "@vue/test-utils": "^2.3.2",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.37.0",
+    "jsdom": "^21.1.1",
     "nuxt": "^3.3.3",
+    "nuxt-vitest": "^0.6.9",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "tailwindcss": "^3.3.1",
