--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@nuxt/devtools": "^0.4.2",
     "@nuxt/eslint-config": "^0.1.1",
     "@types/node": "^18.16.0",
     "@vue/eslint-config-prettier": "^7.1.0",
